// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ansible Automation Resolver Correctly resolves Ansible Job Templates 1`] = `
Object {
  "data": Object {
    "ansibleJobTemplates": Array [
      Object {
        "description": "",
        "extra_vars": "",
        "name": "Demo Job Template",
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Correctly resolves ansible automations in multi ns 1`] = `
Object {
  "data": Object {
    "ansibleAutomations": Array [
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-default-AnsibleJob",
          "namespace": "default",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-kube-system-AnsibleJob",
          "namespace": "kube-system",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-policy-namespace-AnsibleJob",
          "namespace": "policy-namespace",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-cluster1-AnsibleJob",
          "namespace": "cluster1",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-local-cluster-AnsibleJob",
          "namespace": "local-cluster",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Correctly resolves ansible automations in single ns 1`] = `
Object {
  "data": Object {
    "ansibleAutomations": Array [
      Object {
        "apiVersion": "policy.open-cluster-management.io/v1alpha1",
        "kind": "PolicyAutomation",
        "metadata": Object {
          "name": "policy-grc-default-AnsibleJob",
          "namespace": "default",
        },
        "spec": Object {
          "automationDef": Object {
            "extra_vars": Object {
              "selector": "target-cluster",
            },
            "name": "Demo Job Template",
            "secret": "grc-testing",
            "type": "AnsibleJob",
          },
          "eventHook": "non-compliance",
          "mode": "once",
          "policyRef": "policy-grc-111",
        },
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Correctly resolves ansible credentials 1`] = `
Object {
  "data": Object {
    "ansibleCredentials": Array [
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "default",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "kube-system",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "policy-namespace",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "cluster1",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
      Object {
        "host": "https://ansible-tower-web-svc-tower.apps.policy-grc-cp-dev-z4bg2.dev08.red-chesterfield.com",
        "name": "toweraccess",
        "namespace": "local-cluster",
        "token": "cjRqWnl5eWh1M2pYMzNuUFNrY25oQ2VKQ1ZNQlNN",
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Should copy and return secret name as credential needs to be copied 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "default.toweraccess",
    },
  },
}
`;

exports[`Ansible Automation Resolver Should correctly resolve ansible automation history 1`] = `
Object {
  "data": Object {
    "ansibleAutomationHistories": Array [
      Object {
        "finished": "2021-05-03T17:32:06.357295Z",
        "job": "default/policy-role-once-7fg9p",
        "name": "policy-role-once-7fg9p",
        "namespace": "default",
        "started": "2021-05-03T17:31:59.779211Z",
        "status": "successful",
      },
    ],
  },
}
`;

exports[`Ansible Automation Resolver Should return existing secret name as the copied secret already exists 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "existing_toweraccess",
    },
  },
}
`;

exports[`Ansible Automation Resolver Should return root ansible credential name as the targeNamespace is same as credential namespace 1`] = `
Object {
  "data": Object {
    "copyAnsibleSecret": Object {
      "name": "toweraccess",
    },
  },
}
`;
